--- a/content/cloud-docs/run/cli.mdx
+++ b/content/cloud-docs/run/cli.mdx
@@ -49,7 +49,9 @@ To enable the CLI-driven workflow, you must:
 
 1. Run `terraform login` to authenticate with Terraform Cloud. Alternatively, you can [manually configure credentials in the CLI config file](/cli/config/config-file#credentials).
 
-1. Add the `cloud` block to your Terraform configuration. The example below shows how you can map your CLI workspaces to Terraform Cloud workspaces that have a specific tag.
+1. Add the `cloud` block to your Terraform configuration. You can define its arguments direcly in your configuration file or supply them through for [non-interactive workflows](#non-interactive-workflows). Refer to [Using Terraform Cloud](/cli/cloud) for configuration details.
+
+   The following example shows how to map CLI workspaces to Terraform Cloud workspaces with a specific tag.
 
    ```
    terraform {
@@ -83,8 +85,6 @@ To enable the CLI-driven workflow, you must:
    If you ever set or change modules or Terraform Settings,
    run "terraform init" again to reinitialize your working directory.
    ```
-
-Refer to [Using Terraform Cloud](/cli/cloud) for more details about how to initialize and configure the integration.
 
 ### Implicit Workspace Creation
 
@@ -124,7 +124,7 @@ you can do so by defining a [`.terraformignore` file in your configuration direc
 
 ## Remote Speculative Plans
 
-You can run speculative plans in any workspace where you have permission to queue plans. ([More about permissions.](/cloud-docs/users-teams-organizations/permissions))
+You can run speculative plans in any workspace where you have [permission to queue plans](/cloud-docs/users-teams-organizations/permissions). Speculative plans use the configuration code from the local working directory, but will use variable values from the specified workspace.
 
 To run a [speculative plan][] on your configuration, use the `terraform plan` command. The plan will run in Terraform Cloud, and the logs will stream back to the command line along with a URL to view the plan in the Terraform Cloud UI.
 
@@ -151,11 +151,12 @@ Changes to Outputs:
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-Speculative plans use the configuration code from the local working directory, but will use variable values from the specified workspace.
 
 ## Remote Applies
 
-In workspaces that aren't connected to a VCS repository, users with permission to apply runs can trigger remote applies with the CLI. ([More about permissions.](/cloud-docs/users-teams-organizations/permissions))
+In workspaces that are not connected to a VCS repository, users with [permission to apply runs](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) can use the CLI to trigger remote applies. Remote applies use the configuration code from the local working directory, but use the variable values from the specified workspace.
+
+~> **Important:** You cannot run remote applies in workspaces that are linked to a VCS repository, since the repository serves as the workspace’s source of truth. To apply changes in a VCS-linked workspace, merge your changes to the designated branch.
 
 When you are ready to apply configuration changes, use the `terraform apply` command. Terraform Cloud will plan your changes, and the command line will prompt you for approval before applying them.
 
@@ -191,11 +192,28 @@ Do you want to perform these actions in workspace "docs-workspace"?
 Apply complete! Resources: 1 added, 0 changed, 0 destroyed.
 ```
 
+### Non-Interactive Workflows
+
+You can use [environment variables](/cli/cloud/settings#environment-variables) to configure `cloud` block attributes in non-interactive workflows like Continuous Integration/Continuous Deployment (CI/CD). External systems cannot run the traditional apply workflow because it requires console input from the user to approve plans. Instead, you must choose one of the following approaches.
+
+#### Automatically approve plans
+
+Add the [`-auto-approve`](/cli/commands/apply#auto-approve) flag to skip the plan approval step in the apply workflow.
+```bash
+$ terraform apply -auto-approve
+```
+
+We do not recommend this approach for production use cases because you cannot review proposed changes before Terraform applies them.
+
+#### Run a speculative plan
+
+You can first run and review a [speculative plan](/cloud-docs/run#speculative-plans) to preview the changes Terraform will make to your infrastructure. We recommend the following approaches based on your [execution mode](/cloud-docs/workspaces/settings#execution-mode).
+
+- For local execution, save the approved speculative plan and then run `terraform apply -auto-approve` with the saved plan.
+-  For remote execution, Terraform Cloud does not support uploding a saved plan, so we recommend running `terraform apply -auto-approve` immediately after approving the speculative plan. The more time passes between the speculative plan and the apply, the more you risk drift. Drift occurs when there are changes to your infrastructure outside of Terraform, and the Terraform plan represents these as diffs. When you auto-approve plans that may contain drift, you risk making unintended changes to your infrastructure. For this reason, we do not recommend this approach for production use cases.
+
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-Remote applies use the configuration code from the local working directory, but use the variable values from the specified workspace.
-
-~> **Important:** You cannot run remote applies in workspaces that are linked to a VCS repository, since the repository serves as the workspace’s source of truth. To apply changes in a VCS-linked workspace, merge your changes to the designated branch.
 
 ## Sentinel Policies
 
