More edits to tinker with workflow and page pages cleaner

--- a/content/cloud-docs/index.mdx
+++ b/content/cloud-docs/index.mdx
@@ -7,13 +7,13 @@ description: >-
 
 # Terraform Cloud and Terraform Enterprise
 
-This is the documentation for Terraform Cloud and Terraform Enterprise.
+Terraform Cloud and Terraform Enterprise are different distributions of the same application. This documentation applies to both Terraform Cloud and Terraform Enterprise except when specifically stated otherwise. For expediency, this documentation refers to the application as Terraform Cloud.
 
-Terraform Cloud and Terraform Enterprise are different distributions of the same application; this documentation applies to both of them except when specifically stated otherwise.
-
-For expediency, this documentation refers to the application as Terraform Cloud.
+-> **Note:** This documentation focuses on the API and user interface. Refer to [Terraform Enterprise Install and Admin](/enterprise) for details about maintaining your Terraform Enterprise instance.
 
 ## About Terraform Cloud and Terraform Enterprise
+
+> **Hands On:** Try our [What is Terraform Cloud - Intro and Sign Up](https://learn.hashicorp.com/tutorials/terraform/cloud-sign-up?in=terraform/cloud-get-started) tutorial on HashiCorp Learn.
 
 [Terraform Cloud](/cloud) is an application that helps teams use Terraform together. It manages Terraform runs in a consistent and reliable environment, and includes easy access to shared state and secret data, access controls for approving changes to infrastructure, a private registry for sharing Terraform modules, detailed policy controls for governing the contents of Terraform configurations, and more.
 
@@ -26,14 +26,3 @@ Enterprises with advanced security and compliance needs can purchase [Terraform 
 ### Note About Product Names
 
 Before mid-2019, all distributions of Terraform Cloud used to be called Terraform Enterprise; the self-hosted distribution was called Private Terraform Enterprise (PTFE). These previous names sometimes still appear in supporting tools (like [the `tfe` Terraform provider](https://registry.terraform.io/providers/hashicorp/tfe/latest), which is also intended for use with Terraform Cloud).
-
-## Who is This Documentation For?
-
-The Terraform Cloud documentation is for everyone who uses the Terraform Cloud application to provision and manage infrastructure. This includes Terraform Enterprise users, since Terraform Enterprise and Terraform Cloud are the same application.
-
-The [Terraform Enterprise deployment and operation documentation](/enterprise) is for admins and operators who install and maintain their organization's Terraform Enterprise instance.
-
-## Where Should I Go First?
-
-- If you want to learn by doing, begin with [the Terraform Cloud Getting Started collection](https://learn.hashicorp.com/collections/terraform/cloud-get-started?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) on learn.hashicorp.com.
-- If you want a high-level overview of nearly everything Terraform Cloud does, begin with [the overview of features](/cloud-docs/overview).
