--- a/content/cloud-docs/run/index.mdx
+++ b/content/cloud-docs/run/index.mdx
@@ -1,13 +1,13 @@
 ---
 page_title: >-
-  Terraform Runs and Remote Operations - Terraform Cloud and Terraform
+  Remote Operations - Terraform Cloud and Terraform
   Enterprise
 description: >-
   Terraform Cloud allows you to run Terraform remotely through the UI, API, or
   CLI. Learn how Terraform Cloud manages runs.
 ---
 
-# Terraform Runs and Remote Operations
+# Remote Operations
 
 > **Hands-on:** Try the [Get Started — Terraform Cloud](https://learn.hashicorp.com/collections/terraform/cloud-get-started?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) collection on HashiCorp Learn.
 
