--- a/content/cloud-docs/overview.mdx
+++ b/content/cloud-docs/overview.mdx
@@ -47,7 +47,7 @@ Terraform Enterprise generally includes all of Terraform Cloud's paid features, 
 
 ### Changing Your Payment Plan
 
-[Organization owners](/cloud-docs/users-teams-organizations/teams#the-owners-team) can manage its billing plan. The plan and billing settings include an integrated storefront, and you can subscribe to paid plans with a credit card.
+[Organization owners](/cloud-docs/users-teams-organizations/teams#the-owners-team) can manage an organization's billing plan. The plan and billing settings include an integrated storefront, and you can subscribe to paid plans with a credit card.
 
 To change an organization's plan:
 
