--- a/content/enterprise/releases/2022/index.mdx
+++ b/content/enterprise/releases/2022/index.mdx
@@ -10,6 +10,7 @@ Terraform Enterprise releases from 2022 are listed in the table below.
 
 | Version                                            | Release Sequence | Recommended<br /> Replicated CLI                                     | Bundled <br />Terraform CLI**                                          | Sentinel                                                                    |
 | -------------------------------------------------- | ---------------- | -------------------------------------------------------------------- | ------------------------------------------------------------------- | --------------------------------------------------------------------------- |
+| [v202205-1](/enterprise/releases/2022/v202205-1)   | 619              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.9](https://github.com/hashicorp/terraform/releases/tag/v1.1.9) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202204-2](/enterprise/releases/2022/v202204-2)\* | 610              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.7](https://github.com/hashicorp/terraform/releases/tag/v1.1.7) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202204-1](/enterprise/releases/2022/v202204-1)   | 609              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.7](https://github.com/hashicorp/terraform/releases/tag/v1.1.7) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202203-1](/enterprise/releases/2022/v202203-1)   | 607              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.6](https://github.com/hashicorp/terraform/releases/tag/v1.1.6) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
