--- a/content/enterprise/releases/index.mdx
+++ b/content/enterprise/releases/index.mdx
@@ -7,12 +7,13 @@ description: >-
 
 # Terraform Enterprise Releases
 
-~> The next release `v202205-1` is scheduled for May 17, 2022.
+~> The next release `v202206-1` is scheduled for June 14, 2022.
 
 We release a new Terraform Enterprise version each month. The table below lists releases from the current calendar year as well as the last required release. You can find previous releases in the sidebar.
 
 | Version                                              | Release Sequence | Recommended<br /> Replicated CLI                                     | Bundled <br />Terraform CLI**                                            | Sentinel                                                                       |
 | ---------------------------------------------------- | ---------------- | -------------------------------------------------------------------- | --------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
+| [v202205-1](/enterprise/releases/2022/v202205-1)   | 619              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.9](https://github.com/hashicorp/terraform/releases/tag/v1.1.9) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202204-2](/enterprise/releases/2022/v202204-2)\*   | 610              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.7](https://github.com/hashicorp/terraform/releases/tag/v1.1.7) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202204-1](/enterprise/releases/2022/v202204-1)     | 609              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.7](https://github.com/hashicorp/terraform/releases/tag/v1.1.7) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
 | [v202203-1](/enterprise/releases/2022/v202203-1)     | 607              | [2.53.4](https://release-notes.replicated.com/release-notes/2.53.4/) | [1.1.6](https://github.com/hashicorp/terraform/releases/tag/v1.1.6) | [0.18.6](https://docs.hashicorp.com/sentinel/changelog#0-18-6-february-2-2022) |
