--- a/content/cloud-docs/run/cli.mdx
+++ b/content/cloud-docs/run/cli.mdx
@@ -201,7 +201,7 @@ If you prefer to use the CLI, we recommend first running a [speculative plan](/c
 - **Local Execution:**  Save the approved speculative plan and then run `terraform apply -auto-approve` with the saved plan.
 - **Remote Execution:** Terraform Cloud does not support uploding a saved plan, so we recommend running `terraform apply -auto-approve` immediately after approving the speculative plan to reduce the risk of drift. The [`-auto-approve`](/cli/commands/apply#auto-approve) flag skips the plan approval step in the apply workflow.
 
-  ~> **Warning:** Remote execution with non-interactive workflows may introduce drift. Drift occurs when there are changes to your infrastructure outside of Terraform. When you auto-approve new, unsaved plans, you risk making unintended changes to your infrastructure.
+  ~> **Warning:** Remote execution with non-interactive workflows requires auto-approved deployments. Minimize risk of unpredictable infrastructure changes and configuration drift by making sure that no one can change your infrastructure outside of your automated build pipeline. 
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
