--- a/content/cloud-docs/run/cli.mdx
+++ b/content/cloud-docs/run/cli.mdx
@@ -49,7 +49,7 @@ To enable the CLI-driven workflow, you must:
 
 1. Run `terraform login` to authenticate with Terraform Cloud. Alternatively, you can [manually configure credentials in the CLI config file](/cli/config/config-file#credentials).
 
-1. Add the `cloud` block to your Terraform configuration. You can define its arguments direcly in your configuration file or supply them through for [non-interactive workflows](#non-interactive-workflows). Refer to [Using Terraform Cloud](/cli/cloud) for configuration details.
+1. Add the `cloud` block to your Terraform configuration. You can define its arguments directly in your configuration file or supply them through environment variables, which can be useful for [non-interactive workflows](#non-interactive-workflows). Refer to [Using Terraform Cloud](/cli/cloud) for configuration details.
 
    The following example shows how to map CLI workspaces to Terraform Cloud workspaces with a specific tag.
 
