--- a/content/enterprise/install/pre-install-checklist.mdx
+++ b/content/enterprise/install/pre-install-checklist.mdx
@@ -5,6 +5,14 @@ description: >-
   data files before installing Terraform Enterprise.
 ---
 
+  Terraform Enterprise must be installed on a customer-controlled machine.
+
+  For installation instructions, choose your preferred deployment method from the sidebar navigation to the left.
+
+  ~> **Important:** Terraform Enterprise has several requirements which must be met before installing it. At minimum, make sure you have read the [Pre-Install Checklist](/enterprise/before-installing), decided on an operational mode, prepared your credentials, prepared data storage services or devices, and prepared an appropriate Linux instance for the software.
+
+-------
+
 # Terraform Enterprise Pre-Install Checklist
 
 Before installing Terraform Enterprise, you'll need to make several key architecture decisions and prepare some infrastructure and data files. Please make careful note of these requirements, as the installation may not be successful if these requirements are not met.
@@ -274,7 +282,7 @@ to 128MB and keeping up to 3 JSON log files at any given time:
 	"log-driver": "json-file",
 	"log-opts": {
 		"max-size": "128m",
-		"max-file": "3" 
+		"max-file": "3"
 	}
 }
 ```
