--- a/content/enterprise/saml/idp-configuration/index.mdx
+++ b/content/enterprise/saml/idp-configuration/index.mdx
@@ -1,11 +1,10 @@
 ---
-page_title: SAML Identity Provider Configuration - Terraform Enterprise
+page_title: SAML Identity Provider Sample Authentication Request - Terraform Enterprise
 description: >-
-  Find instructions to set up SAML for specific identity providers and a sample
-  sign-on request and response.
+  Set up SAML for specific identity providers and review a sample sign-on request and response.
 ---
 
-# Identity Provider Configuration
+# Sample Authentication Request
 
 Single sign-on setup instructions for specific identity providers (IdP).
 
