--- a/content/enterprise/saml/configuration.mdx
+++ b/content/enterprise/saml/configuration.mdx
@@ -7,6 +7,10 @@ description: >-
 
 # Configuration
 
+SAML is an XML-based standard for authentication and authorization. Terraform Enterprise can act as a service provider (SP) (or Relying Party) with your internal SAML identity provider (IdP).
+
+Terraform Enterprise supports the SAML 2.0 standard. It has been tested with a variety of identity providers.
+
 SAML requires the configuration of two parties:
 
 - The Identity Provider (IdP).
