Fix docker link

--- a/content/enterprise/install/pre-install-checklist.mdx
+++ b/content/enterprise/install/pre-install-checklist.mdx
@@ -27,8 +27,7 @@ and should be selected based on your organization's preferences.
 
 ## Obtain Credentials
 
-You must obtain an Enterprise license and a TLS certificate for Terraform Enterprise to use. If you choose the [external services operational mode](#choose-operational-mode), Terraform Enterprise requires access to an S3-compliant endpoint for object storage. Refer to [Credentials](/enterprise/requirements/credentials) for details.
-
+You must obtain an Enterprise license and a TLS certificate for Terraform Enterprise to use. If you choose the sexternal services operational mode, Terraform Enterprise requires access to an S3-compliant endpoint for object storage. Refer to [Credentials](/enterprise/requirements/credentials) for details.
 
 ## Prepare Data Storage
 Make sure your data storage services or device meet Terraform Enterprise's requirements. Refer to [Hardware and Data Storage Requirements](/enterprise/requirements/hardware-data-storage) for details.
@@ -42,7 +41,7 @@ Configure the following for the Linux Instance:
 - **Operating System:** Refer to [Supported OS](/enterprise/requirements/os-specific/supported-os) for details.
 - **Hardware:** It is critical that you set up the correct hardware before installing and running Terraform Enterprise. Incorrect amounts of disk space or memory can cause significant performance issues. Refer to [Hardware Requirements](/enterprise/requirements/hardware) for details.
 - **Network:** Terraform Enterprise is a networked application. Its Linux instance(s) needs to allow several kinds of incoming and outgoing network traffic. Refer to [Network Requirements](/enterprise/before-installing/network-requirements) for details.
-- **Docker Engine:** Terraform Enterprise requires a Docker engine. Refer to [Docker Requirements](/enterprise/requirements/credentials) for configuration details.
+- **Docker Engine:** Terraform Enterprise requires a Docker engine. Refer to [Docker Requirements](/enterprise/requirements/docker) for configuration details.
 
 
 ## Optimize Logging (Optional)
