--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -100,8 +100,7 @@ Workspace admins have the following permissions on their workspace:
 - Read and write variables
 - Read and write state versions
 - Read and write workspace settings (workspace admins only) — this includes general settings, notification configurations, run triggers, and more.
-- Set or remove workspace permissions for visible teams (workspace admins only)
-  - Workspace admins cannot view or manage teams that are are ["Secret"](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
+- Set or remove workspace permissions for visible teams (workspace admins only). Workspace admins cannot view or manage teams that are are ["Secret"](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
 - Delete workspace (workspace admins only)
 - Manage workspace run tasks
 
